add bouton on web window to play

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors Game</title>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <main>
-      <p>
-        For now, this project doesn't have graphic interface. Please open
-        console, to play the game. Enjoy !
-      </p>
+      <h1>Rock Paper Scissors</h1>
+      <div id="choice-buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+      </div>
+      <div id="result"></div>
     </main>
   </body>
 </html>
