--- a/index.html
+++ b/index.html
@@ -10,12 +10,55 @@
   <body>
     <main>
       <h1>Rock Paper Scissors</h1>
-      <div id="choice-buttons">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+      <div class="game-choices">
+        <div class="user-choice" id="choice-buttons">
+          <div class="top-choice">
+            <a href="#" id="rock"
+              ><img
+                src="img/rock.png"
+                alt="rock"
+                style="width: 100px; height: 100px"
+            /></a>
+          </div>
+          <div class="bottom-choices">
+            <a href="#" id="paper"
+              ><img
+                src="img/paper.png"
+                alt="paper"
+                style="width: 100px; height: 100px"
+            /></a>
+            <a href="#" id="scissors"
+              ><img
+                src="img/scissors.png"
+                alt="scissors"
+                style="width: 100px; height: 100px"
+            /></a>
+          </div>
+        </div>
+        <div class="computer-choice">
+          <div class="top-choice">
+            <img
+              src="img/rock.png"
+              alt="rock"
+              style="width: 100px; height: 100px"
+            />
+          </div>
+          <div class="bottom-choices">
+            <img
+              src="img/paper.png"
+              alt="paper"
+              style="width: 100px; height: 100px"
+            />
+            <img
+              src="img/scissors.png"
+              alt="scissors"
+              style="width: 100px; height: 100px"
+            />
+          </div>
+        </div>
       </div>
       <div id="result"></div>
+      <div id="win-defeat"></div>
     </main>
   </body>
 </html>
