image of computer change according to it's choice

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
         </div>
         <div class="computer-choice">
-          <img src="img/rock.png" alt="rock" />
+          <img src="img/rock.png" alt="computer choice" id="img-computer" />
         </div>
       </div>
       <div id="result"></div>
