--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    <script src="game.js" defer></script>
   </head>
   <body>
     <main>
@@ -13,12 +13,13 @@
       <div class="game-choices">
         <div class="user-choice" id="choice-buttons">
           <div class="top-choice">
-            <a href="#" id="rock"><img src="img/rock.png" alt="rock" /></a>
+            <a href="#" id="rock"><img src="img/rock.svg" alt="rock" /></a>
+            </svg>
           </div>
           <div class="bottom-choices">
-            <a href="#" id="paper"><img src="img/paper.png" alt="paper" /></a>
+            <a href="#" id="paper"><img src="img/paper.svg" alt="paper" /></a>
             <a href="#" id="scissors"
-              ><img src="img/scissors.png" alt="scissors"
+              ><img src="img/scissors.svg" alt="scissors"
             /></a>
           </div>
         </div>
